# OC_P6_MLOps_part_1

./: .env.example  .gitignore  02_features.ipynb  03_modeling.ipynb  README.md  config.py  main.py  push_model_to_huggingface.py  pyproject.toml  utils.py
data/processed/: kicks_ready_for_model.csv
model_export_prod/: MLmodel  conda.yaml  input_example.json  model.onnx  model.pkl  requirements.txt  serving_input_example.json
notebooks/: 01_eda.ipynb  02_features.ipynb  03_modeling.ipynb  04_xgboost_finetuning.ipynb  05_lr_finetuning.ipynb  06_lr_final_model.ipynb
